--- a/6_00_0.html
+++ b/6_00_0.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 
 <head>
-  <title>Watch://Timer</title>
+  <title>Tabatch</title>
   <meta name=”viewport” content=”width=device-width,initial-scale=1″>
   <link rel="icon" href="https://nikonosfive.github.io/dev/watch/logo.svg" />
   <link rel="manifest" href="https://nikonosfive.github.io/dev/watch/manifest.json" />
