--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Tabatch</title>
   <meta name=”viewport” content=”width=device-width,initial-scale=1″>
   <link rel="icon" href="/img/logo.svg" />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
   <link rel="apple-touch-icon" href="/img/logo.ico">
   <script>
     const registerServiceWorker = async () => {
