--- a/index.html
+++ b/index.html
@@ -668,8 +668,8 @@
               <p class="yohaku">
                 <a class="inside" href="https://sites.google.com/view/tadr-tech/blog/htu">使い方 How to use</a>｜<a class="inside" href="https://sites.google.com/view/tadr-tech/blog">Release Notes</a>
                 <br>
-                <a class="inside">Watch://Timer by TADR, SEI2423</a>｜
-                <a class="inside">Ver.6.50.0(2024.4.6)</a><br>
+                <a class="inside">Tabatch by TADR, SEI2423</a>｜
+                <a class="inside">Ver.6.30.0(2024.4.21)</a><br>
                 <a class="inside">音源：</a><a class="inside" href="https://amachamusic.chagasi.com">甘茶の音楽工房様</a>
                  
               </p>
