--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
  <li class="dropdown__item">
               <p class="a-contents">
               <p class="yohaku"><a>Font Settings(beta)</a>
-                <input type="radio" name="radioName" id="Oswald" style="display: none;"></input><label for="Oswald" class="fontlabel">Oswald</label>
+                <input type="radio" name="radioName" id="cursive" style="display: none;"></input><label for="cursive" class="fontlabel">Cursive</label>
  <input type="radio" name="radioName" id="notosans" style="display: none;"></input><label for="notosans" class="fontlabel">Noto Sans</label>
                   <input type="radio" name="radioName" id="serif" style="display: none;"></input><label for="serif" class="fontlabel">Serif</label>
                 
